# translate_dock

./: Cargo.toml  README.md  build.rs
src/: app.rs  main.rs  translate.rs
