[package]
name = "translate_dock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tray-icon = "0.21.3"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
] }

[build-dependencies]
winres = "0.1"

# Release 配置（生产）
[profile.release]
opt-level = 3          # 最大优化
debug = false
# split-debuginfo = "..."
debug-assertions = false
overflow-checks = false
lto = true             # 链接时优化
panic = 'abort'        # 崩溃时直接退出
incremental = false
strip = true
codegen-units = 1
